--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+.description{
+  color: red;
+}
+/* .products{
+  display: flex;
+} */
+
+table, th, td {
+  border:1px solid white;
+}
