--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -1,11 +1,15 @@
-
-.description{
+.description {
   color: red;
 }
 /* .products{
   display: flex;
 } */
 
-table, th, td {
-  border:1px solid white;
+table,
+th,
+td {
+  border: 1px solid white;
+}
+a {
+  text-decoration: none !important;
 }
