--- a/src/components/task/task.module.css
+++ b/src/components/task/task.module.css
@@ -1,3 +1,9 @@
-.selected{
-    border: 1px solid red !important;
+.selected {
+  border: 1px solid red !important;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
