added status function

--- a/src/components/task/task.module.css
+++ b/src/components/task/task.module.css
@@ -7,3 +7,9 @@
   flex-direction: column;
   justify-content: space-between;
 }
+.created {
+  color: gray;
+  font-size: 13px;
+  margin-top: 10px;
+  margin-bottom: 0;
+}
