some style changes

--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,8 +1,7 @@
-/* a {
-  color: white;
-} */
+.navlink {
+  color: white !important;
+}
 .selected {
-  color: tomato !important;
   font-size: 22px;
 }
 .menu-link {
