--- a/src/Pages/Login/login.module.css
+++ b/src/Pages/Login/login.module.css
@@ -13,7 +13,9 @@
   text-align: left;
 }
 .container {
-  position: relative;
-  top: 25%;
-  left: 50%;
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
