--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -7,3 +7,12 @@
 .menu-link {
   margin-right: 10px;
 }
+.navbar {
+  position: fixed !important;
+  width: 100%;
+  z-index: 10;
+}
+
+.search {
+  margin-top: 70px;
+}
