--- a/src/Pages/Login/login.module.css
+++ b/src/Pages/Login/login.module.css
@@ -18,6 +18,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  position: fixed;
 }
 @media only screen and (max-width: 600px) {
   .container {
