--- a/src/Pages/Login/login.module.css
+++ b/src/Pages/Login/login.module.css
@@ -19,3 +19,8 @@
   align-items: center;
   justify-content: center;
 }
+@media only screen and (max-width: 800px) {
+  .container {
+    height: auto;
+  }
+}
